Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45063

Incorrect height and location of ComboBox on Mac OS X

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0
    • 5.4.1
    • Quick: Controls 1
    • None
    • OS X Yosemite 10.10.2, Qt 5.4.1, Qt 5.3.2
    • macOS

    Description

      On Mac OS X when ComboBox is located at the bottom of screen and it's dropdown doesn't fit on the screen, it's moved to the top of the window.
      If the window is maximized, it's shrunk to zero size.

      Not reproduced consistently. If the behavior is not observed, try stretching the window by hand to occupy the entire screen without using Maximize button, or moving the window a few pixels up or down.

      Works correctly on Windows.

      Attached is the test project.

      import QtQuick 2.3
      import QtQuick.Controls 1.2
      
      ApplicationWindow {
          visible: true
          visibility: "Maximized"
          width: 640
          height: 480
          title: qsTr("Hello World")
      
          ComboBox {
              anchors.bottom: parent.bottom
              model: ListModel {
                  ListElement { name: "Line one" }
                  ListElement { name: "Line two" }
                  ListElement { name: "Line three" }
                  ListElement { name: "Line four" }
                  ListElement { name: "Line five" }
              }
              textRole: "name"
          }
      
          Text {
              text: qsTr("Hello World")
              anchors.centerIn: parent
          }
      }
      

      Attachments

        1. ComboBoxBug.png
          ComboBoxBug.png
          36 kB
        2. ComboBoxTest.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            zmeyc Andrey Fidrya
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes