QCocoaMenu: Manually reposition popups

If the popup will show too close to the screen bottom,
we need to help Cocoa a bit. The horizontal positioning
hasn't shown any problems.

Change-Id: I5f298529fbf4a902e39f686f368046a8d1c11760
Task-number: QTBUG-45063
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>